--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body class="stackedit">
   <div class="stackedit__html"><h1 id="moonpay-apk-profiling-result">Moonpay APK Profiling Result</h1>
 <h2 id="executive-summary">1. Executive Summary</h2>
-<p>This technical report presents a systematic performance analysis of the Moonpay Android application v2.0.1 , conducted using ADB, APK Analyzer, Flipper, and Android Studio Profiler. The investigation evaluated three critical user flows:</p>
+<p>This technical report presents a systematic performance analysis of the Moonpay Android apk v2.0.1 , conducted using ADB, APK Analyzer, Flipper, and Android Studio Profiler. The investigation evaluated three critical user flows:</p>
 <ol>
 <li><strong>Application Startup</strong> - From launch to interactive home screen</li>
 <li><strong>Cryptocurrency Purchase Flow</strong> - BTC purchase transaction process</li>
@@ -22,8 +22,8 @@
 <h2 id="methodology">2. Methodology</h2>
 <h3 id="testing-environment">2.1 Testing Environment</h3>
 <ul>
-<li><strong>Device</strong>: Google Pixel 6, Android 13</li>
-<li><strong>Application Version</strong>: Moonpay v1.3.2 (132)</li>
+<li><strong>Device</strong>: Google Pixel 6, Android 14</li>
+<li><strong>Application Version</strong>: Moonpay v2.0.1</li>
 <li><strong>Testing Tools</strong>:
 <ul>
 <li>Android Debug Bridge (ADB) v1.0.41</li>
